fix scrollbar bug

--- a/frontend/sass/laletterbuilder/styles.scss
+++ b/frontend/sass/laletterbuilder/styles.scss
@@ -237,10 +237,16 @@ $jf-navbar-height: 70px;
   // Other places, we want the tap target to spill over the sides of the item. Not here.
   .jf-accordion-item {
     margin: 0px;
-  }
-  // Since this accordion is contained within another object, we don't need extra space at the bottom.
-  .jf-space-below-2rem {
-    margin-bottom: 0px;
+    details {
+      // Since this accordion is contained within another object, we don't need extra space at the bottom.
+      margin-bottom: 0;
+      summary {
+        // Fix bug where scrollbars appear on accordion titles
+        .media-content {
+          overflow-x: unset;
+        }
+      }
+    }
   }
 }
 
